--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,14 @@
 services:
   - type: web
-    name: govt-scheme-bot
-    env: python
+    name: govscheme-chatbot
+    runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
-      - key: FLASK_ENV
-        value: production
+      - key: SECRET_KEY
+        generateValue: true
+      - key: OPENAI_API_KEY
+        required: false  # Only if using AI features
+      - key: PYTHON_VERSION
+        value: 3.9.13
+    healthCheckPath: /health
