--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-flask==2.3.2
-flask-cors==3.0.10
-python-dotenv==1.0.0
-openai==0.27.8
-gunicorn==20.1.0
-redis==4.5.5
-flask-limiter==2.8.1
-bleach==6.0.0
+flask
+flask-cors
+flask-jwt-extended
+python-dotenv
+pymongo
+bcrypt
+python-multipart
