--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-flask
-flask-cors
-flask-jwt-extended
-python-dotenv
-pymongo
-bcrypt
-python-multipart
+flask==2.3.2
+flask-cors==3.0.10
+flask-jwt-extended==4.5.2
+python-dotenv==1.0.0
+pymongo==4.5.0
+bcrypt==4.0.1
+python-multipart==0.0.6
+gunicorn==21.2.0
